# tls_web_server

./: .gitignore  README.md  client_side.py  pyproject.toml  server_side.py
.github/workflows/: pages.yml
scripts/: demo.py
tests/: test_config.py  test_http.py  test_integration.py  test_tls_connection.py  test_workflow_docs.py
tls_web_server/: __init__.py  config.py  http.py  server.py
tls_web_server/tls/: __init__.py  certificates.py  connection.py  framing.py  key_schedule.py  messages.py  record_protection.py
walkthrough/: walkthrough.html
