[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-web-server"
version = "0.1.0"
description = "A self-written TLS-like secure channel integrated into a self-written non-blocking web server."
requires-python = ">=3.9"
dependencies = [
    "cryptography>=46.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["tls_web_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
